<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.sdu.rnyati.assignment4.AddUserActivity">

    <TextView
        android:text="@string/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:text="NickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="31dp"
        android:id="@+id/textView2"
        tools:text="@string/name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nicknameText"
        android:hint="@string/enter_name"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/passwordText"
        android:fontFamily="sans-serif" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nicknameText"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="15dp"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/nicknameText"
        android:layout_alignParentEnd="true"
        android:id="@+id/passwordText"
        android:textSize="12sp"
        android:layout_alignStart="@+id/textView"
        android:hint="Enter password"
        android:fontFamily="sans-serif" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/countrySpinner"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/passwordText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView4"
        android:text="@string/country"
        android:layout_below="@+id/passwordText"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countrySpinner"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="22dp"
        android:id="@+id/textView5" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:id="@+id/stateSpinner"
        android:layout_alignStart="@+id/countrySpinner" />

    <TextView
        android:text="@string/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stateSpinner"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="16dp"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/stateSpinner"
        android:layout_alignStart="@+id/stateSpinner"
        android:id="@+id/cityText"
        android:textSize="12sp"
        android:layout_alignParentEnd="true"
        android:hint="Enter city"
        android:fontFamily="sans-serif" />

    <TextView
        android:text="@string/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityText"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="24dp"
        android:id="@+id/textView7" />

    <Button
        android:text="Locate User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="locateUserClicked"
        android:textSize="12sp"
        android:layout_below="@+id/yearEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/yearEditText"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/button4"
        android:layout_alignParentEnd="true"
        android:fontFamily="sans-serif"
        android:hint="Enter Year" />

    <TextView
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latTextView"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignStart="@+id/cityText" />

    <TextView
        android:text="-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longTextView"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:text="Add new user "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:backgroundTint="@color/cast_intro_overlay_button_background_color"
        android:textColor="@android:color/white"
        android:onClick="addNewUserClicked"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Latitude:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:text="Longitude:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
